// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add package.json 1`] = `
"{
  \\"name\\": \\"mrm-task-package\\",
  \\"version\\": \\"1.0.0\\",
  \\"description\\": \\"\\",
  \\"author\\": {
    \\"name\\": \\"Gendalf\\",
    \\"url\\": \\"https://middleearth.com\\"
  },
  \\"contributors\\": [],
  \\"homepage\\": \\"https://github.com/gendalf/mrm-task-package\\",
  \\"bugs\\": \\"https://github.com/gendalf/mrm-task-package/issues\\",
  \\"repository\\": \\"https://github.com/gendalf/mrm-task-package\\",
  \\"license\\": \\"MIT\\",
  \\"engines\\": {
    \\"node\\": \\">=10\\"
  },
  \\"main\\": \\"index.js\\",
  \\"files\\": [
    \\"index.js\\"
  ],
  \\"scripts\\": {},
  \\"keywords\\": [],
  \\"dependencies\\": {},
  \\"devDependencies\\": {}
}"
`;

exports[`should set custom Node.js version 1`] = `
"{
  \\"name\\": \\"\\",
  \\"version\\": \\"1.0.0\\",
  \\"description\\": \\"\\",
  \\"author\\": {
    \\"name\\": \\"Gendalf\\",
    \\"url\\": \\"https://middleearth.com\\"
  },
  \\"contributors\\": [],
  \\"homepage\\": \\"https://github.com/gendalf/\\",
  \\"bugs\\": \\"https://github.com/gendalf//issues\\",
  \\"repository\\": \\"https://github.com/gendalf/\\",
  \\"license\\": \\"MIT\\",
  \\"engines\\": {
    \\"node\\": \\">=9.1\\"
  },
  \\"main\\": \\"index.js\\",
  \\"files\\": [
    \\"index.js\\"
  ],
  \\"scripts\\": {},
  \\"keywords\\": [],
  \\"dependencies\\": {},
  \\"devDependencies\\": {}
}"
`;

exports[`should set custom Node.js version 2`] = `
"{
  \\"name\\": \\"\\",
  \\"version\\": \\"1.0.0\\",
  \\"description\\": \\"\\",
  \\"author\\": {
    \\"name\\": \\"Gendalf\\",
    \\"url\\": \\"https://middleearth.com\\"
  },
  \\"contributors\\": [],
  \\"homepage\\": \\"https://github.com/gendalf/\\",
  \\"bugs\\": \\"https://github.com/gendalf//issues\\",
  \\"repository\\": \\"https://github.com/gendalf/\\",
  \\"license\\": \\"MIT\\",
  \\"engines\\": {
    \\"node\\": \\">=9.1\\"
  },
  \\"main\\": \\"index.js\\",
  \\"files\\": [
    \\"index.js\\"
  ],
  \\"scripts\\": {},
  \\"keywords\\": [],
  \\"dependencies\\": {},
  \\"devDependencies\\": {}
}"
`;

exports[`should set custom license 1`] = `
"{
  \\"name\\": \\"\\",
  \\"version\\": \\"1.0.0\\",
  \\"description\\": \\"\\",
  \\"author\\": {
    \\"name\\": \\"Gendalf\\",
    \\"url\\": \\"https://middleearth.com\\"
  },
  \\"contributors\\": [],
  \\"homepage\\": \\"https://github.com/gendalf/\\",
  \\"bugs\\": \\"https://github.com/gendalf//issues\\",
  \\"repository\\": \\"https://github.com/gendalf/\\",
  \\"license\\": \\"BSD\\",
  \\"engines\\": {
    \\"node\\": \\">=10\\"
  },
  \\"main\\": \\"index.js\\",
  \\"files\\": [
    \\"index.js\\"
  ],
  \\"scripts\\": {},
  \\"keywords\\": [],
  \\"dependencies\\": {},
  \\"devDependencies\\": {}
}"
`;
